# Hawkeye

./: .gitignore  Makefile  README.md  config.h
ctrl/: ctrl.c  entry_list_gen.py  headers.h  out.txt  switch_config.h
detection-agent/: .gitignore  README.md  VERSION  build_device_code.sh  meson.build  meson_options.txt  rebuild.sh
detection-agent/device/np_nic_telemetry/: pcc_np_nic_telemetry_dev.c
detection-agent/device/rp/: pcc_rp_dev.c
detection-agent/device/rp/algo/: rtt_template.c  rtt_template.h  rtt_template_algo_params.h  rtt_template_ctxt.h
detection-agent/host/: detection_agent.c  detection_agent.h  main.c  pcc_core.c  pcc_core.h
simulation/mix/: config.txt  flow.txt  topology.txt
simulation/mix/data/: graph.py
simulation/mix_deadlock/: config.txt  config_doc.txt  flow.txt  topology.txt
simulation/mix_deadlock/data/: graph.py
simulation/scratch/: third.cc  third_deadlock.cc
simulation/src/network/doc/: queue.rst
simulation/src/network/utils/: custom-header.cc  custom-header.h  queue.cc  queue.h
simulation/src/point-to-point/model/: qbb-net-device.cc  qbb-net-device.h  rdma-hw.cc  rdma-hw.h  rdma-queue-pair.cc  rdma-queue-pair.h  switch-mmu.cc  switch-mmu.h  switch-node.cc  switch-node.h
switch/: hawkeye.p4  headers.p4  parsers.p4
